syntax = "proto3";

option go_package = "github.com/dislinked";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service NotificationService{
  rpc GetByUser(GetNotificationsByUserRequest) returns(GetMultipleNotifications) {
    option (google.api.http) = {
      get: "/notification/user/{uuid}"
    };
  }
  rpc CreateNotification(NewNotification) returns(NewNotification) {
    option(google.api.http) = {
      post: "/notification"
      body: "notification"
    };
  }
}

message GetMultipleNotifications {
  repeated Notification notifications = 1;
}

message GetNotificationsByUserRequest {
  string uuid = 1;
}

message NewNotification {
  Notification notification = 1;
}

message Notification {
  string id = 1;
  string user = 2;
  string content = 3;
  string url = 4;
  bool seen = 5;
  google.protobuf.Timestamp date = 6;
}
